--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/self-reflection-certainty"
-Repository = "https://github.com/yourusername/self-reflection-certainty"
-Issues = "https://github.com/yourusername/self-reflection-certainty/issues"
+Homepage = "https://github.com/anishkelkar/self-reflection-certainty"
+Repository = "https://github.com/anishkelkar/self-reflection-certainty"
+Issues = "https://github.com/anishkelkar/self-reflection-certainty/issues"
+
+[tool.setuptools.packages.find]
+where = ["src"]
